--- a/SpaceEngineersIngameScript.csproj
+++ b/SpaceEngineersIngameScript.csproj
@@ -34,14 +34,53 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Scripts\Control.cs" />
-    <Compile Include="Scripts\Drawing.cs" />
+    <Compile Include="Control\Autopilot.cs" />
+    <Compile Include="Control\AttitudeWaypoint.cs" />
+    <Compile Include="Control\AttitudePathSegment.cs" />
+    <Compile Include="Control\AttitudeController.cs" />
+    <Compile Include="Control\PositionController.cs" />
+    <Compile Include="Control\ThrusterGroup.cs" />
+    <Compile Include="Control\GyroGroup.cs" />
+    <Compile Include="Control\ToothPathSegment.cs" />
+    <Compile Include="Control\PositionPathSegment.cs" />
+    <Compile Include="Control\CosinePathSegment.cs" />
+    <Compile Include="Control\IToolPathSegment.cs" />
+    <Compile Include="Control\IPathSegment.cs" />
+    <Compile Include="Control\PositionWaypoint.cs" />
+    <Compile Include="Control\Control.cs" />
+    <Compile Include="Control\WaypointsPath.cs" />
+    <Compile Include="Control\Waypoint.cs" />
+    <Compile Include="Drawing\Draw3.cs" />
+    <Compile Include="Drawing\Canvas.cs" />
+    <Compile Include="Drawing\BresenhamLineGenerator.cs" />
+    <Compile Include="Drawing\TrianglePointGenerator.cs" />
+    <Compile Include="Drawing\Radar\RadarDisplay.cs" />
+    <Compile Include="Drawing\Radar\RadarModel.cs" />
+    <Compile Include="Drawing\Model.cs" />
+    <Compile Include="Drawing\Scene.cs" />
+    <Compile Include="Drawing\LineClip3.cs" />
+    <Compile Include="Drawing\LineClip2.cs" />
+    <Compile Include="Drawing\Drawing.cs" />
     <Compile Include="Scripts\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\spotter.cs" />
     <Compile Include="Scripts\taldeen_inv_manager.cs" />
-    <Compile Include="Scripts\Targeting.cs" />
-    <Compile Include="Scripts\TargetTracking.cs" />
+    <Compile Include="Targeting\PMath.cs" />
+    <Compile Include="Targeting\Targetable.cs" />
+    <Compile Include="Targeting\MissileTurret.cs" />
+    <Compile Include="Targeting\GatlingTurret.cs" />
+    <Compile Include="Targeting\InteriorTurret.cs" />
+    <Compile Include="Targeting\ShipWeapon.cs" />
+    <Compile Include="Targeting\Turret.cs" />
+    <Compile Include="Targeting\Trajectory1.cs" />
+    <Compile Include="Targeting\Trajectory3.cs" />
+    <Compile Include="TargetTracking\LidarTracker.cs" />
+    <Compile Include="TargetTracking\LidarPool.cs" />
+    <Compile Include="TargetTracking\TargetPingQueue.cs" />
+    <Compile Include="TargetTracking\TrackedEntityCollection.cs" />
+    <Compile Include="TargetTracking\TrackedEntity.cs" />
+    <Compile Include="TargetTracking\Ratio.cs" />
+    <Compile Include="Util\Tuple.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -84,6 +123,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
